# mix

./: .gitignore  README.md
Algorithm/: CMakeLists.txt  sort.cpp
GetPrice/: func.py  gandi.html  gandi.json  name.html  name.json  namesilo.html  namesilo.json  run.py  settings.py  tmp.py
TakeBus/: .gitignore  CMakeLists.txt  README.MD
TakeBus/data/: buses.txt  routes.txt  stations.txt
TakeBus/include/: map.h  menu.h  model.h  search.h  serach.h
TakeBus/source/: main.cpp  map.cpp  menu.cpp  search.cpp
get_class_schedule_of_wust/: .gitignore  get_schedule.py
get_windows_wallpaper/: get_windows_wallpaper.py
